# WeatherModel

./: .env  .gitignore  MANIFEST.in  README.md  Weather_Notebook.ipynb  dependencies.txt  pyproject.toml  setup.py
.ipynb_checkpoints/: Weather_Notebook-checkpoint.ipynb  pyproject-checkpoint.toml
MeteorologicalScripts/: GetWeatherData.py  RenewableEnergyModelling.py  Wards_Method.py
MeteorologicalScripts/.ipynb_checkpoints/: GetWeatherData-checkpoint.py  RenewableEnergyModelling-checkpoint.py  Wards_Method-checkpoint.py
WeatherData/: Chile_Locations_Coords.csv  CoastalChile_Solar.csv  CoastalChile_Wind.csv
WeatherScripts/: ClusterWeatherData.py  GetBothData.py
WeatherScripts/.ipynb_checkpoints/: ClusterWeatherData-checkpoint.py  GetBothData-checkpoint.py  GetSolarData-checkpoint.py  GetWindData-checkpoint.py
data/: Chile_Locations_Coords.csv
docs/: example.md  quickstart.md  solar.md  wind.md
examples/: get_solar.py  get_wind_solar.py
src/meteor_py/: __init__.py  demand_profile.py  get_data.py  renewable_modelling.py  weather_data.py
src/meteor_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/meteor_py/.ipynb_checkpoints/: errors-checkpoint.py  plots-checkpoint.py
tests/: cluster_data.py  get_wind.py
tests/.ipynb_checkpoints/: cluster_data-checkpoint.py  get_solar-checkpoint.py  get_wind-checkpoint.py  get_wind_solar-checkpoint.py
weathermodel/: __init__.py  demand_profile.py  plots.py  renewable_modelling.py  sampling.py  wards_method.py  weather_data.py
