[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteor_py"
version = "0.1"
description = "Meteorological modelling of solar and wind farms."
authors = [
  { name = "Cameron Aldren", email = "cameronaldren@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "earthaccess==0.11.0",
  "xarray==2023.6.0",
  "cartopy==0.23.0",
  "shapely==2.0.6",
  "pysolar==0.11",
  "dill==0.3.9",
  "scipy==1.12.0",
  "h5netcdf==1.4.0"
]

[tool.setuptools.package-data]
meteor_py = ["/src/meteor_py/data/*.csv"]
